[package]
name = "intervals-good"
version = "0.1.1"
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = ["interval", "arithmetic", "math"]
categories = ["mathematics"]
repository = "https://github.com/oflatt/intervals-good"
authors = ["Oliver Flatt <oflatt@gmail.com>"]
description = "An interval arithmetic library with support for many functions and which tracks when domain errors may occur or are guaranteed to occur."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.18.0"
rand = "0.8.5"
symbol_table = {git = "https://github.com/mwillsey/symbol_table", rev = "acddcf8938d1b4ed2fce048c9d83c30203d404b9", features = ["global"]}
float_next_after = "1.0.0"